# watson

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  watson.wasm
example/bf/: Cargo.toml  Makefile  bf.wasm  helloworld.bf  helloworld.wasm  index.html  wapm.toml
example/bf/src/: main.rs
example/visualizer/: Cargo.toml  Makefile
example/visualizer/src/: main.rs
example/wq/: Cargo.toml  Makefile  README.md  index.html  main.wasm  random.wasm  test.json
example/wq/src/: main.rs
examples/bf/: Makefile  bf.wasm  helloworld.bf  helloworld.json  helloworld.wasm  print_a.bf  wapm.toml
examples/bf/src/: main.rs
examples/bfi/: Cargo.toml  Makefile  bfi.wasm  print_a.wasm  sleepyhelloworld.wasm  wapm.toml
examples/bfi/src/: main.rs
examples/simulator/: Cargo.toml  Makefile  index.html  index.js  simple.wasm  simulator.wasm
examples/simulator/src/: lib.rs
examples/sleepyhelloworld/: Cargo.toml  Makefile
examples/sleepyhelloworld/src/: main.rs
examples/visualizer/: Cargo.toml  Makefile  simplest.wasm
examples/wq/: Cargo.toml  old.json  test.wasm  test2.json  unofficial.json  wq.wasm
examples/wq/src/: main.rs
src/: compiler.rs  interpreter.rs  lib.rs  parser.rs  spec_tests.rs  util.rs
src/core/: common.rs  instructions.rs  mod.rs  program.rs  view.rs  wast.rs
src/parser/: mod.rs  wast.rs
tests/core/: README.md
