[package]
name = "watson"
version = "0.2.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "a no_std web assembly loader"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://www.github.com/richardanaya/watson"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
webassembly = "0.5.0"
