[package]
name = "watson"
version = "0.9.2"
authors = ["Richard Anaya"]
edition = "2018"
description = "a no_std web assembly loader"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://www.github.com/richardanaya/watson"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
webassembly = {path="../webassembly", version="0.8.2" }
serde = { version = "1.0.116", default-features = false, features = ["alloc","derive"] }
spin = "0.5.2"
