[package]
name = "wq"
version = "0.0.2"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["wasm", "command-line-utilities"]
description = "a tool for converting web assembly into json"
repository = "https://www.github.com/richardanaya/watson/examples/wq"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watson = {path="../..",version="0.3.3"}
colored = "1.9"
