[package]
name = "simulator"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watson = {path="../../" }
globals = "1"
serde_json = { version = "1.0.51", default-features = false, features = ["alloc"] }